# ChangeLog for dev-perl/JavaScript-Minifier-XS
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +JavaScript-Minifier-XS-0.06.ebuild, +metadata.xml:
  initial commit
