@@ -1,4 +1,6 @@
 DIST JavaScript-Minifier-XS-0.06.tar.gz 12129 RMD160 b8209c90b2ca63953f8240763430af5acf32b937 SHA1 6bd6bbb4cbc859a273dc3e1f93f1e5e21a2bc048 SHA256 2060507e51f6dc30b1664e1b443930626ecef151bb38af34e562f614a7698198
+DIST JavaScript-Minifier-XS-0.07.tar.gz 12153 RMD160 8361fe263f63940ca75df624339123033a88e478 SHA1 92e1adaadc355851491ca4470dab890f3d10e00a SHA256 f61c92bc56693191596484d7926dff07b5588de9d242a984b9aefbfea5838502
 EBUILD JavaScript-Minifier-XS-0.06.ebuild 304 RMD160 10776e185b380200af8c9c98188860ff10564c9c SHA1 198a8f050e722d62c30d5dcaf5a56a0ae94cc19a SHA256 05b626567f259abeffd41fab7473db45a2239ba4043bfeb6339ec182c399d411
-MISC ChangeLog 257 RMD160 c531f0c6ee6f5bbad31c86950938ce5038d21bae SHA1 a4532df02c3a656f68a4c18168850bc0899f6ebc SHA256 63c16f5d880399fa28db980c0a7300422e60d032d72df079e17f40ef90146718
+EBUILD JavaScript-Minifier-XS-0.07.ebuild 304 RMD160 10776e185b380200af8c9c98188860ff10564c9c SHA1 198a8f050e722d62c30d5dcaf5a56a0ae94cc19a SHA256 05b626567f259abeffd41fab7473db45a2239ba4043bfeb6339ec182c399d411
+MISC ChangeLog 410 RMD160 0d077332e040fcd085b516851fb9a560fd7bd1b7 SHA1 4cccc8c6b0268b7cec40751c1e22b8ed09b81a70 SHA256 6656b332cf42c70694045b7eaef38cb284cb272de3ef0f2d90b8ea47cf62ba63
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
